--- a/test.html
+++ b/test.html
@@ -4,10 +4,22 @@
 		<title>Git Tutorial</title>
 	</head>
 	<body>
-	
+		<header>
+			<nav>
+				<li></li>
+				<li></li>
+				<li></li>
+			</nav>
+		</header>
 	
 		<h1>Playing with Git</h1>
 	
-	
+		<footer>
+			<nav>
+				<li></li>
+				<li></li>
+				<li></li>
+			</nav>
+		</footer>
 	</body>
 </html>
