--- a/test.html
+++ b/test.html
@@ -20,10 +20,11 @@
 		<h1>Playing with Git</h1>
 	
 		<footer>
+			<h1>Footer Title</h1>
 			<nav>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>home</li>
+				<li>work</li>
+				<li>play</li>
 			</nav>
 		</footer>
 	</body>
